Tried to fix footer link alignment.

--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -25,6 +25,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+h3 {
+  margin-bottom: 0.5rem;
+}
+
 .space-evenly {
   display: flex;
   justify-content: space-evenly;
